# foxsec-tools

./: README.md
metrics/redash/: .gitignore  .stmocli.conf  README.md  active_fraud_detection_heuristics.sql  addon_block_lookup.sql  all_dependencies_on_services.sql  aws_instances_using_old_amis_grouped_by_app.sql  aws_instances_using_up_to_date_amis_for_high_risk_services.sql  aws_out_of_date_instances_grouped_by_ami.sql  aws_pytest_service_results.sql  aws_users_without_mfa.sql  backup_queries  baseline_changes_count.sql  baseline_changes_today.sql  baseline_number_of_urls_tested_per_site.sql  baseline_sites_with_no_content.sql  baseline_todays_failures.sql  bmo_count_of_sec_critical_and_high_bugs_by_product_component.sql  bmo_open_bugs_for_product_component_keyword.sql  bmo_sec_critical_and_high_bugs_for_product_component.sql  bmo_wsec_bugs_by_year.sql  checklist_sumary_latest_by_service_environment.sql  checklist_with_filters.sql  critical_services_sorted_by_number_of_sites.sql  csp_on_production_sites.sql  current_aws_failures_per_account.sql  current_baseline_latest_pass_fail_on_low_risk_sites.sql  current_baseline_pass_fail_on_high_risk_sites.sql  current_csp_pass_fail_on_high_risk_production_websites.sql  current_csp_pass_fail_on_low_risk_production_websites.sql  current_hsts_on_production_services.sql  current_hsts_pass_fail_on_high_risk_production_sites.sql  (+117 more)
metrics/utils/: .gitignore  Conventions.md  Makefile  README.md  gen_athena_ddl  generate_table_graph  pyproject.toml  query_table_usage  query_table_usage.py
utils/: cfs.py  raise_github_issue.py
(+100 files in other folders)
